src/test/ui/issues/issue-3080.stderr
error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> $DIR/issue-3080.rs:7:5
   |
LL |     X(()).with();
   |     ^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error: aborting due to previous error

For more information about this error, try `rustc --explain E0133`.
